cconnect  database with staff function